[package]
name = "quick-webm-recorder"
version = "0.1.0"
description = "Quick WebM screen recorder with ffmpeg"
authors = ["you"]
edition = "2021"

[lib]
name = "quick_webm_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
